--- a/src/app/member/components/member-list/list-member.component.html
+++ b/src/app/member/components/member-list/list-member.component.html
@@ -22,15 +22,15 @@
 
       <div class="d-flex justify-content-end mb-4">
         <button (click)="openColumnPrinterModal()"
-                class="btn btn-outline-success shadow-sm me-2">
+                class="btn btn-outline-primary shadow-sm me-2">
           <i class="bi bi-printer"></i> Exporter
         </button>
         <button (click)="openFilterPopup()"
-                class="btn btn-outline-success shadow-sm me-2">
+                class="btn btn-outline-primary shadow-sm me-2">
           <i class="bi bi-sliders"></i> Filtrer
         </button>
         <button (click)="openPopupForNotificationModal()"
-                class="btn btn-outline-success shadow-sm">
+                class="btn btn-outline-primary shadow-sm">
           <i class="bi bi-envelope-check"></i> Enregistrer et Notifier
         </button>
       </div>
@@ -92,7 +92,7 @@
               </td>
               <td>
                 <button (click)="displayMemberDetails(member.id)"
-                        class="btn btn-outline-success btn-sm rounded-pill px-3">
+                        class="btn btn-outline-primary btn-sm rounded-pill px-3">
                   <i class="bi bi-eye"></i> Afficher
                 </button>
               </td>
