--- a/src/app/configuration/components/bourse-admin-page/bourse-admin-page.component.html
+++ b/src/app/configuration/components/bourse-admin-page/bourse-admin-page.component.html
@@ -6,7 +6,7 @@
       <i class="bi bi-plus-circle me-1"></i> Ajouter Une Bourse
     </button>
     <ng-template #closeButton>
-      <button (click)="handleDisplayForm()" class="btn btn-outline-danger shadow-sm">
+      <button (click)="handleDisplayForm()" class="btn btn-secondary shadow-sm">
         <i class="bi bi-x-circle me-1"></i> Annuler
       </button>
     </ng-template>
@@ -64,7 +64,7 @@
           <td>{{ bourse.lebelle }}</td>
           <td>{{ bourse.montant | currency: 'XOF' : 'symbol' : '1.0-0' : 'fr' }}</td>
           <td class="text-center">
-            <button (click)="onUpdate(bourse.bourseId)" class="btn btn-outline-warning btn-sm me-2">
+            <button (click)="onUpdate(bourse.bourseId)" class="btn btn-secondary btn-sm me-2">
               <i class="bi bi-pencil"></i> Modifier
             </button>
             <button (click)="deleteBourse(bourse.bourseId)" class="btn btn-outline-danger btn-sm">
