--- a/src/app/configuration/components/clubs-admin-page/clubs-admin-page.component.html
+++ b/src/app/configuration/components/clubs-admin-page/clubs-admin-page.component.html
@@ -6,7 +6,7 @@
       <i class="bi bi-plus-circle me-1"></i> Ajouter Une ClubModel
     </button>
     <ng-template #closeButton>
-      <button (click)="handleDisplayForm()" class="btn btn-outline-danger shadow-sm">
+      <button (click)="handleDisplayForm()" class="btn btn-secondary shadow-sm">
         <i class="bi bi-x-circle me-1"></i> Annuler
       </button>
     </ng-template>
@@ -48,7 +48,7 @@
           <tr *ngFor="let club of clubs">
             <td>{{ club.name }}</td>
             <td class="text-end">
-              <button (click)="onUpdate(club.id)" class="btn btn-warning btn-sm me-2">
+              <button (click)="onUpdate(club.id)" class="btn btn-secondary btn-sm me-2">
                 <i class="bi bi-pencil"></i> Modifier
               </button>
               <button (click)="deleteClub(club.id)" class="btn btn-danger btn-sm">
