--- a/src/app/configuration/components/commission-admin-page/commisssion-admin.component.html
+++ b/src/app/configuration/components/commission-admin-page/commisssion-admin.component.html
@@ -6,7 +6,7 @@
       <i class="bi bi-plus-circle me-1"></i> Ajouter Une commission
     </button>
     <ng-template #closeButton>
-      <button (click)="handleDisplayForm()" class="btn btn-outline-danger shadow-sm">
+      <button (click)="handleDisplayForm()" class="btn btn-secondary shadow-sm">
         <i class="bi bi-x-circle me-1"></i> Annuler
       </button>
     </ng-template>
@@ -52,7 +52,7 @@
         <tr *ngFor="let commission of commissions">
           <td>{{ commission.name }}</td>
           <td class="text-end">
-            <button (click)="onUpdate(commission.id)" class="btn btn-warning btn-sm me-2">
+            <button (click)="onUpdate(commission.id)" class="btn btn-secondary btn-sm me-2">
               <i class="bi bi-pencil"></i> Modifier
             </button>
             <button (click)="onDelete(commission.id)" class="btn btn-danger btn-sm">
