--- a/src/app/member/components/filter-popup/filter-popup.component.html
+++ b/src/app/member/components/filter-popup/filter-popup.component.html
@@ -4,7 +4,7 @@
     <div class="modal-content custom-modal-content">
 
       <div class="modal-header custom-modal-header">
-        <h5 class="modal-title custom-modal-title">
+        <h5 class="modal-title custom-modal-title card-header">
           <i class="bi bi-funnel-fill me-2"></i> Filtrer les Membres
         </h5>
         <button (click)="closeModal()" type="button" class="btn-close custom-btn-close" aria-label="Close"></button>
