--- a/src/app/shared/popup-group-for-notification/group-for-notification.component.html
+++ b/src/app/shared/popup-group-for-notification/group-for-notification.component.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog modal-dialog-centered modal-md" role="document">
     <div class="modal-content shadow-lg rounded">
       <!-- Modal Header -->
-      <div class="modal-header text-center">
+      <div class="modal-header text-center card-header">
         <h5 class="modal-title">Envoyer un message au groupe</h5>
         <button (click)="closeModal()" type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
